chore: adiciona arquivo .gitignore e cria configuração inicial do server.json — Adicionado o arquivo .gitignore com exclusão da pasta node_modules e criado o arquivo server.json para configuração inicial do servidor.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+
+  "scripts": {
+    "server":"json-server --watch server.json --port 3333"
+  },
+
   "dependencies": {
     "json-server": "^1.0.0-alpha.21"
   }
