--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-
+  "name": "hairday",
+  "description": "aplicação web para agendamento de corte de cabelo",
+  "author": "Vanessa Gomes",
   "scripts": {
-    "server":"json-server --watch server.json --port 3333"
+    "server": "json-server --watch server.json --port 3333",
+    "build": "webpack"
   },
-
   "dependencies": {
     "json-server": "^1.0.0-alpha.21"
+  },
+  "devDependencies": {
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
